--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h1>Calculadora de Média</h1>
         <img id="status" src="./img/calculadora.jpeg" alt="icon">
         <form name="frmMedia">
-            <p> <input type="number" name="txtnota1" placeholder="Nota" class= "caixa" required></p>
-            <p> <input type="number" name="txtnota2" placeholder="Nota" class= "caixa" required></p>
-            <p> <input type="number" name="txtnota3" placeholder="Nota" class= "caixa" required></p>
-            <p> <input type="number" name="txtnota4" placeholder="Nota" class= "caixa" required></p>
+            <p> <input type="number" name="txtnota1" placeholder="Nota" class="caixa" required></p>
+            <p> <input type="number" name="txtnota2" placeholder="Nota" class="caixa" required></p>
+            <p> <input type="number" name="txtnota3" placeholder="Nota" class="caixa" required></p>
+            <p> <input type="number" name="txtnota4" placeholder="Nota" class="caixa" required></p>
             <p> <input type="button" value="Calcular" onclick="calcular()"></p>
-            <p> <input type="reset" value="Limpar" onclick="Limpar()"></p>
+             <input type="reset" value="Limpar" onclick="limparCampos()">
 
 
         </form>
