atualizaçao do pwa

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p> <input type="number" name="txtnota4" placeholder="Nota" class="caixa" required></p>
             <p> <input type="button" value="Calcular" onclick="calcular()"></p>
             <input type="reset" value="Limpar" onclick="limparCampos()">
+            <p id="mensagemMedia"></p>
 
 
         </form>
